Fix issue with replace player skipping turns
Resolves #29